second commit, added hover dropdowns and changed overall aes

--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
     <!-- Main Content -->
     <div class="text">
       <h2>Desalmonator</h2> 
-      <h3>Lorem Ipsum.</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.</p>
-      <a href="#">Details</a>
+      <h3>from Mingdao 2021</h3>
+      <p>In modern society, people pursue a more delicate life, hoping to live in a better environment. One of the aspects is FOOD. With industrial development, there are various types of food that can be chosen at the market.</p>
+      <a href="https://2021.igem.org/Team:Mingdao/Description">Details</a>
+      <a href="https://2021.igem.org/Team:Mingdao/Members">The Team</a>
     </div>
 
     <!-- Socials -->
@@ -44,21 +42,78 @@
 
   <!-- Navigation -->
   <div class="menu">
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Project</a></li>
+    <ul class="">
+      <li><a href="#" class="">Home</a></li>
+      <div class="dropdown">
+        <li><a href="#" class="dropdown-btn">Project</a></li>
+        <div class="dropdown-content">
+        <ul>
+          <li><a href="#" class="dropdown-link">Description</a></li>
+          <li><a href="#" class="dropdown-link">Engineering</a></li>
+          <li><a href="#" class="dropdown-link">Proof of Concept</a></li>
+        </ul>
+        </div>
+      </div>
       <li><a href="#">Modeling</a></li>
-      <li><a href="#">Enterprise</a></li>
-      <li><a href="#">Parts</a></li>
-      <li><a href="#">Notebook</a></li>
-      <li><a href="#">Team</a></li>
-      <li><a href="#">Human Practices</a></li>
+      <div class="dropdown">
+        <li><a href="#" class="dropdown-btn">Enterprise</a></li>
+        <div class="dropdown-content">
+        <ul>
+          <li><a href="#" class="dropdown-link">Implementation</a></li>
+          <li><a href="#" class="dropdown-link">Hardware</a></li>
+          <li><a href="#" class="dropdown-link">Entrepreneurship</a></li>
+        </ul>
+        </div>
+      </div>
+      <div class="dropdown">
+        <li><a href="#" class="dropdown-btn">Parts</a></li>
+        <div class="dropdown-content">
+        <ul>
+          <li><a href="#" class="dropdown-link">Basic Part</a></li>
+          <li><a href="#" class="dropdown-link">Composite Part</a></li>
+          <li><a href="#" class="dropdown-link">Collection</a></li>
+          <li><a href="#" class="dropdown-link">Contribution</a></li>
+          <li><a href="#" class="dropdown-link">Improvement</a></li>
+        </ul>
+        </div>
+      </div>
+      <div class="dropdown">
+        <li><a href="#" class="dropdown-btn">Notebook</a></li>
+        <div class="dropdown-content">
+        <ul>
+          <li><a href="#" class="dropdown-link">Calendar</a></li>
+          <li><a href="#" class="dropdown-link">Measurement</a></li>
+          <li><a href="#" class="dropdown-link">Protocol</a></li>
+          <li><a href="#" class="dropdown-link">Safety</a></li>
+        </ul>
+        </div>
+      </div>
+      <div class="dropdown">
+        <li><a href="#" class="dropdown-btn">HP</a></li>
+        <div class="dropdown-content">
+        <ul>
+          <li><a href="#" class="dropdown-link">Human Practices</a></li>
+          <li><a href="#" class="dropdown-link">Communication</a></li>
+          <li><a href="#" class="dropdown-link">Edcuation</a></li>
+        </ul>
+        </div>
+      </div>
+      <div class="dropdown">
+        <li><a href="#" class="dropdown-btn">Team</a></li>
+        <div class="dropdown-content">
+        <ul>
+          <li><a href="#" class="dropdown-link">Members</a></li>
+          <li><a href="#" class="dropdown-link">Attributions</a></li>
+          <li><a href="#" class="dropdown-link">Collaborations</a></li>
+        </ul>
+        </div>
+      </div>
     </ul>
   </div>
 
   <!-- Test Context -->
   <div class="filler"></div>
-  <div class="container wiki-content">
+  <div class="container wiki-content bg-light">
     <div class="col-12">
     <!-- <div class="progress">
       <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width:50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">Progress at 50%</div>
@@ -66,52 +121,14 @@
 
     <h1 class="my-6">Abstract of Project</h1>
     <p class="text">With improved transportation, technology, and economy, people can now access to various food sources, and it is of this reason that food is now the source for most illnesses and diseases. Salmonella, a bacteria that accounts the most for food poisoning and diarrheal illness, often appears on raw eggs, chicken, and other dairy products. It is estimated by the Centers for Disease Control and Prevention (CDC) that Salmonella bacteria cause around 1.35 million infections in the U.S. each year, with 420 deaths and 26,500 hospitalizations. Most people who get infected by Salmonella often experience diarrhea, typhoid fever, and stomach ache. Current detection methods of salmonella on dairy products have limitations and deficiencies in speed, accuracy, efficiency and accessibility. Therefore, this project aims to develop a test kit that reduces the 7-day or above process to a one-day process by synthetically modifying a Salmonella bacteriophage with a phi29 polymerase gene. The phage will infect its DNA into the bacteria after contact, causing a reaction called rolling circle amplification (RCA), a widely applicable method to efficiently enhance signal and be detected by DNA staining. We believe implementing this newly-developed test kit will enhance the current food testing industry by being more efficient and effective.</p>
-    <br>
-    <h3 class="heading">Modern Society: Potential Crisis</h3>
-    <p class="text">In modern society, people pursue a more delicate life, hoping to live in a better environment. One of the aspects is FOOD. With industrial development, there are various types of food that can be chosen at the market.</p>
-    <br>
-
-    <h3 class="heading">Food Poisoning</h3>
-    <p class="text">However, during the complicated food processing, some of the facilities might not be clean, or some unscrupulous businessmen even cut corners in order to reduce costs, causing foodstuffs to be polluted and thus make people sick. This is so-called  “food poisoning”. Accordingly, most of the food poisoning results from bacterial infection, and one of the major pathogenic bacteria is “Salmonella”. What is Salmonella? What would it bring about?</p>
-    <br>
-   
-    <h3 class="heading">Salmonella</h3>
-    <p class="text">Salmonella is a bacteria that often shows up on raw meat or on the surface of an egg. Therefore, people get the chance to be infected, what’s worse, fever, vomiting, or even death may come as the consequences. To prevent those serious problems from happening, food factories are asked to have a regular food inspection.</p>
-    <br>
-
-    <h3 class="heading">Detection</h3>
-    <p class="text">To prove that the food products are safe, factories have to send their products to inspection plants 
-    regularly, so as to make sure the products are harmless to the human body. Nevertheless, the time of the detection is one of 
-    the major issues.
-    </p>
-    <br>
-
-    <h3 class="heading">Disadvantages of test methods</h3>
-    <p class="text">In current market test methods, people need to wait at least two days to see the results, and it is time 
-    consuming for customers if they are in a rush and the food could spoil during the testing process as well. Another issue to 
-    be concerned about is that the detection machine is not quite affordable. Significantly, higher costs result in more 
-    expensive inspection fees.</p>
-    <br>
-
-    <h3 class="heading">Our Product</h3>
-    <p class="text">To solve the problems, our team made a product that can rapidly detect if there is Salmonella on the egg's 
-    surface by utilizing bacteriophage. Not only does it cost less money, the time taken for the process is also shorter : this 
-    kit can show the report results within two hours.</p>
-    <br>
-
-    <h3 class="heading">Process</h3>
-    <p class="text">The only thing we need to do is to gather the samples from the eggs and add our product: phages into the 
-    samples, and wait for the results. If the sample shows the fluorescent light, that means the egg surface has been polluted. 
-    By using our product, detection of Salmonella can be quite simple and fast ! </p>
-    <br>
 
     </div>
 
   </div>
-</div>
 <!-- Footer -->
+<div class="footmenu">
   <footer class="container">
-  <div class="row">
+  <div class="row text-light">
     <div class="col-12 col-md">
       Mingdao High School
       <small class="d-block mb-3 text-muted">&copy; 2021</small>
@@ -156,6 +173,7 @@
     </div>
   </div>
   </footer>
+</div>
 
     <!-- Javascript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
