fixed navbar dropdown solution

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>iGEM 2021: Mingdao</title>
   </head>
   <body>
-    <section class="mainpage">
+    <section class="showcase">
     <!-- Heading -->
     <header>
       <h2 class="logo">Mingdao</h2>
@@ -31,6 +31,8 @@
       <a href="https://2021.igem.org/Team:Mingdao/Members">The Team</a>
     </div>
 
+    <div class="filler"></div>
+
     <!-- Socials -->
     <!-- <ul class="social">
       <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
@@ -38,142 +40,129 @@
       <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
     </ul> -->
 
-  </section>
+    </section>
+    <section class="mainpage">
+        <div class="container wiki-content bg-light">
+        <div class="row">
+
+        <h1 class="my-6">Abstract of Project</h1>
+        <p class="text">With improved transportation, technology, and economy, people can now access to various food sources, and it is of this reason that food is now the source for most illnesses and diseases. Salmonella, a bacteria that accounts the most for food poisoning and diarrheal illness, often appears on raw eggs, chicken, and other dairy products. It is estimated by the Centers for Disease Control and Prevention (CDC) that Salmonella bacteria cause around 1.35 million infections in the U.S. each year, with 420 deaths and 26,500 hospitalizations. Most people who get infected by Salmonella often experience diarrhea, typhoid fever, and stomach ache. Current detection methods of salmonella on dairy products have limitations and deficiencies in speed, accuracy, efficiency and accessibility. Therefore, this project aims to develop a test kit that reduces the 7-day or above process to a one-day process by synthetically modifying a Salmonella bacteriophage with a phi29 polymerase gene. The phage will infect its DNA into the bacteria after contact, causing a reaction called rolling circle amplification (RCA), a widely applicable method to efficiently enhance signal and be detected by DNA staining. We believe implementing this newly-developed test kit will enhance the current food testing industry by being more efficient and effective.</p>
+        </div>
+
+        </div>
+    </section>
+
 
   <!-- Navigation -->
-  <div class="menu">
+  <div class="menu sticky">
     <ul class="">
       <li><a href="#" class="">Home</a></li>
       <div class="dropdown">
         <li><a href="#" class="dropdown-btn">Project</a></li>
         <div class="dropdown-content">
-        <ul>
-          <li><a href="#" class="dropdown-link">Description</a></li>
-          <li><a href="#" class="dropdown-link">Engineering</a></li>
-          <li><a href="#" class="dropdown-link">Proof of Concept</a></li>
-        </ul>
+          <a href="#" class="dropdown-item text-light">Description</a>
+          <a href="#" class="dropdown-item text-light">Engineering</a>
+          <a href="#" class="dropdown-item text-light">Proof of Concept</a>
         </div>
       </div>
       <li><a href="#">Modeling</a></li>
       <div class="dropdown">
         <li><a href="#" class="dropdown-btn">Enterprise</a></li>
         <div class="dropdown-content">
-        <ul>
-          <li><a href="#" class="dropdown-link">Implementation</a></li>
-          <li><a href="#" class="dropdown-link">Hardware</a></li>
-          <li><a href="#" class="dropdown-link">Entrepreneurship</a></li>
-        </ul>
+          <a href="#" class="dropdown-item">Implementation</a>
+          <a href="#" class="dropdown-item">Hardware</a></li>
+          <a href="#" class="dropdown-item">Entrepreneurship</a></li>
         </div>
       </div>
       <div class="dropdown">
         <li><a href="#" class="dropdown-btn">Parts</a></li>
         <div class="dropdown-content">
         <ul>
-          <li><a href="#" class="dropdown-link">Basic Part</a></li>
-          <li><a href="#" class="dropdown-link">Composite Part</a></li>
-          <li><a href="#" class="dropdown-link">Collection</a></li>
-          <li><a href="#" class="dropdown-link">Contribution</a></li>
-          <li><a href="#" class="dropdown-link">Improvement</a></li>
+          <li><a href="#" class="dropdown-item">Basic Part</a></li>
+          <li><a href="#" class="dropdown-item">Composite Part</a></li>
+          <li><a href="#" class="dropdown-item">Collection</a></li>
+          <li><a href="#" class="dropdown-item">Contribution</a></li>
+          <li><a href="#" class="dropdown-item">Improvement</a></li>
         </ul>
         </div>
       </div>
       <div class="dropdown">
         <li><a href="#" class="dropdown-btn">Notebook</a></li>
         <div class="dropdown-content">
-        <ul>
-          <li><a href="#" class="dropdown-link">Calendar</a></li>
-          <li><a href="#" class="dropdown-link">Measurement</a></li>
-          <li><a href="#" class="dropdown-link">Protocol</a></li>
-          <li><a href="#" class="dropdown-link">Safety</a></li>
-        </ul>
+          <a href="#" class="dropdown-item">Calendar</a>
+          <a href="#" class="dropdown-item">Measurement</a>
+          <a href="#" class="dropdown-item">Protocol</a>
+          <a href="#" class="dropdown-item">Safety</a>
         </div>
       </div>
       <div class="dropdown">
         <li><a href="#" class="dropdown-btn">HP</a></li>
         <div class="dropdown-content">
-        <ul>
-          <li><a href="#" class="dropdown-link">Human Practices</a></li>
-          <li><a href="#" class="dropdown-link">Communication</a></li>
-          <li><a href="#" class="dropdown-link">Edcuation</a></li>
-        </ul>
+          <a href="#" class="dropdown-item">Human Practices</a>
+          <a href="#" class="dropdown-item">Communication</a>
+          <a href="#" class="dropdown-item">Edcuation</a>
         </div>
       </div>
       <div class="dropdown">
         <li><a href="#" class="dropdown-btn">Team</a></li>
         <div class="dropdown-content">
-        <ul>
-          <li><a href="#" class="dropdown-link">Members</a></li>
-          <li><a href="#" class="dropdown-link">Attributions</a></li>
-          <li><a href="#" class="dropdown-link">Collaborations</a></li>
-        </ul>
+          <a href="#" class="dropdown-item">Members</a>
+          <a href="#" class="dropdown-item">Attributions</a>
+          <a href="#" class="dropdown-item">Collaborations</a>
         </div>
       </div>
     </ul>
   </div>
 
-  <!-- Test Context -->
-  <div class="filler"></div>
-  <div class="container wiki-content bg-light">
-    <div class="col-12">
-    <!-- <div class="progress">
-      <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width:50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">Progress at 50%</div>
-    </div> -->
-
-    <h1 class="my-6">Abstract of Project</h1>
-    <p class="text">With improved transportation, technology, and economy, people can now access to various food sources, and it is of this reason that food is now the source for most illnesses and diseases. Salmonella, a bacteria that accounts the most for food poisoning and diarrheal illness, often appears on raw eggs, chicken, and other dairy products. It is estimated by the Centers for Disease Control and Prevention (CDC) that Salmonella bacteria cause around 1.35 million infections in the U.S. each year, with 420 deaths and 26,500 hospitalizations. Most people who get infected by Salmonella often experience diarrhea, typhoid fever, and stomach ache. Current detection methods of salmonella on dairy products have limitations and deficiencies in speed, accuracy, efficiency and accessibility. Therefore, this project aims to develop a test kit that reduces the 7-day or above process to a one-day process by synthetically modifying a Salmonella bacteriophage with a phi29 polymerase gene. The phage will infect its DNA into the bacteria after contact, causing a reaction called rolling circle amplification (RCA), a widely applicable method to efficiently enhance signal and be detected by DNA staining. We believe implementing this newly-developed test kit will enhance the current food testing industry by being more efficient and effective.</p>
-
+  <!-- Footer -->
+  <div class="footmenu">
+    <footer class="container">
+    <div class="row text-light">
+      <div class="col-12 col-md">
+        Mingdao High School
+        <small class="d-block mb-3 text-muted">&copy; 2021</small>
+      </div>
+      <div class="col-6 col-md">
+        <h5>Features</h5>
+        <ul class="list-unstyled text-small">
+          <li><a class="text-muted" href="#">Cool stuff</a></li>
+          <li><a class="text-muted" href="#">Random feature</a></li>
+          <li><a class="text-muted" href="#">Team feature</a></li>
+          <li><a class="text-muted" href="#">Stuff for developers</a></li>
+          <li><a class="text-muted" href="#">Another one</a></li>
+          <li><a class="text-muted" href="#">Last time</a></li>
+        </ul>
+      </div>
+      <div class="col-6 col-md">
+        <h5>Resources</h5>
+        <ul class="list-unstyled text-small">
+          <li><a class="text-muted" href="#">Resource</a></li>
+          <li><a class="text-muted" href="#">Resource name</a></li>
+          <li><a class="text-muted" href="#">Another resource</a></li>
+          <li><a class="text-muted" href="#">Final resource</a></li>
+        </ul>
+      </div>
+      <div class="col-6 col-md">
+        <h5>Resources</h5>
+        <ul class="list-unstyled text-small">
+          <li><a class="text-muted" href="#">Business</a></li>
+          <li><a class="text-muted" href="#">Education</a></li>
+          <li><a class="text-muted" href="#">Government</a></li>
+          <li><a class="text-muted" href="#">Gaming</a></li>
+        </ul>
+      </div>
+      <div class="col-6 col-md">
+        <h5>Sponsors</h5>
+        <ul class="list-unstyled text-small">
+          <li><a class="text-muted" href="#">SnapGene</a></li>
+          <li><a class="text-muted" href="#">Integrated DNA Technologies</a></li>
+          <li><a class="text-muted" href="#">Addgene</a></li>
+          <li><a class="text-muted" href="#">TwistedBioscience</a></li>
+        </ul>
+      </div>
     </div>
-
+    </footer>
   </div>
-<!-- Footer -->
-<div class="footmenu">
-  <footer class="container">
-  <div class="row text-light">
-    <div class="col-12 col-md">
-      Mingdao High School
-      <small class="d-block mb-3 text-muted">&copy; 2021</small>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Features</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="text-muted" href="#">Cool stuff</a></li>
-        <li><a class="text-muted" href="#">Random feature</a></li>
-        <li><a class="text-muted" href="#">Team feature</a></li>
-        <li><a class="text-muted" href="#">Stuff for developers</a></li>
-        <li><a class="text-muted" href="#">Another one</a></li>
-        <li><a class="text-muted" href="#">Last time</a></li>
-      </ul>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Resources</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="text-muted" href="#">Resource</a></li>
-        <li><a class="text-muted" href="#">Resource name</a></li>
-        <li><a class="text-muted" href="#">Another resource</a></li>
-        <li><a class="text-muted" href="#">Final resource</a></li>
-      </ul>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Resources</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="text-muted" href="#">Business</a></li>
-        <li><a class="text-muted" href="#">Education</a></li>
-        <li><a class="text-muted" href="#">Government</a></li>
-        <li><a class="text-muted" href="#">Gaming</a></li>
-      </ul>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Sponsors</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="text-muted" href="#">SnapGene</a></li>
-        <li><a class="text-muted" href="#">Integrated DNA Technologies</a></li>
-        <li><a class="text-muted" href="#">Addgene</a></li>
-        <li><a class="text-muted" href="#">TwistedBioscience</a></li>
-      </ul>
-    </div>
-  </div>
-  </footer>
-</div>
 
     <!-- Javascript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
