final version for homepage

--- a/index.html
+++ b/index.html
@@ -77,13 +77,11 @@
       <div class="dropdown">
         <li><a href="#" class="dropdown-btn">Parts</a></li>
         <div class="dropdown-content">
-        <ul>
-          <li><a href="#" class="dropdown-item">Basic Part</a></li>
-          <li><a href="#" class="dropdown-item">Composite Part</a></li>
-          <li><a href="#" class="dropdown-item">Collection</a></li>
-          <li><a href="#" class="dropdown-item">Contribution</a></li>
-          <li><a href="#" class="dropdown-item">Improvement</a></li>
-        </ul>
+          <a href="#" class="dropdown-item">Basic Part</a>
+          <a href="#" class="dropdown-item">Composite Part</a>
+          <a href="#" class="dropdown-item">Collection</a>
+          <a href="#" class="dropdown-item">Contribution</a>
+          <a href="#" class="dropdown-item">Improvement</a>
         </div>
       </div>
       <div class="dropdown">
