Revert "broken ver:"
This reverts commit b030f2acbd35f7530f4ffdb9970daabe4423301a.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row">
 
         <h1 class="my-6">Abstract of Project</h1>
-        <p class="text">With improved transportation, technology, and economy, people can now access various food sources, and it is of this reason that food is now the source for most illnesses and diseases. Salmonella, a bacteria that accounts the most for food poisoning and diarrheal illness, often appears on raw eggs, chicken, and other dairy products. It is estimated by the Centers for Disease Control and Prevention (CDC) that Salmonella bacteria cause around 1.35 million infections in the U.S. each year, with 420 deaths and 26,500 hospitalizations. Most people who get infected by Salmonella often experience diarrhea, typhoid fever, and stomach ache. Current detection methods of salmonella on dairy products have limitations and deficiencies in speed, accuracy, efficiency and accessibility. Therefore, this project aims to develop a test kit that reduces the 7-day or above process to a one-day process by synthetically modifying a Salmonella bacteriophage with a phi29 polymerase gene. The phage will infect its DNA into the bacteria after contact, causing a reaction called rolling circle amplification (RCA), a widely applicable method to efficiently enhance signal and be detected by DNA staining. We believe implementing this newly-developed test kit will enhance the current food testing industry by being more efficient and effective.</p>
+        <p class="text">With improved transportation, technology, and economy, people can now access to various food sources, and it is of this reason that food is now the source for most illnesses and diseases. Salmonella, a bacteria that accounts the most for food poisoning and diarrheal illness, often appears on raw eggs, chicken, and other dairy products. It is estimated by the Centers for Disease Control and Prevention (CDC) that Salmonella bacteria cause around 1.35 million infections in the U.S. each year, with 420 deaths and 26,500 hospitalizations. Most people who get infected by Salmonella often experience diarrhea, typhoid fever, and stomach ache. Current detection methods of salmonella on dairy products have limitations and deficiencies in speed, accuracy, efficiency and accessibility. Therefore, this project aims to develop a test kit that reduces the 7-day or above process to a one-day process by synthetically modifying a Salmonella bacteriophage with a phi29 polymerase gene. The phage will infect its DNA into the bacteria after contact, causing a reaction called rolling circle amplification (RCA), a widely applicable method to efficiently enhance signal and be detected by DNA staining. We believe implementing this newly-developed test kit will enhance the current food testing industry by being more efficient and effective.</p>
         </div>
 
         </div>
@@ -92,7 +92,7 @@
 
   <!-- Navigation -->
   <!-- TEMPLATED -->
-  <div class="menu">
+  <div class="menu sticky">
     <ul class="">
       <li><a href="#" class="">Home</a></li>
       <div class="dropdown">
@@ -154,7 +154,7 @@
   <!-- TEMPLATED -->
   <div class="footmenu">
     <footer class="container">
-    <div class="row mt-6 text-light">
+    <div class="row text-light">
       <div class="col-12 col-md">
         Mingdao iGEM Team
         <small class="d-block mb-3 text-muted">&copy; 2021 All Rights Reserved</small>
