Revert "small style changes and implementations"
This reverts commit 939a25604f950c589f7ae9184e5c5cd24492a342.

--- a/index.html
+++ b/index.html
@@ -6,24 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <!-- TEMPLATED -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="./index.css" type="text/css">
 
+    <link rel="stylesheet" href="./index.css" type="text/css">
     <title>iGEM 2021: Mingdao</title>
   </head>
   <body>
     <section class="showcase">
     <!-- Heading -->
     <header>
-      <h2 class="logo">Mingdao<img src="https://2021.igem.org/wiki/images/6/63/T--Mingdao--igem_logo.jpg" id="logo"></h2>
+      <h2 class="logo">Mingdao</h2>
       <div class="toggle"></div>
     </header>
     <!-- Video -->
     <video src="./desalmon.mp4" muted loop autoplay></video>
     <div class="overlay"></div>
 
-    <!-- Main Header -->
+    <!-- Main Content -->
     <div class="text">
       <h2>Desalmonator</h2> 
       <h3>from Mingdao 2021</h3>
@@ -32,18 +31,16 @@
       <a href="https://2021.igem.org/Team:Mingdao/Members">The Team</a>
     </div>
 
-    <!-- Used for Spacing -->
     <div class="filler"></div>
 
     <!-- Socials -->
-    <ul class="social">
+    <!-- <ul class="social">
       <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
+      <li><a href="#"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png"></a></li>
       <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
-    </ul>
+    </ul> -->
 
     </section>
-
-    <!-- Main Page Content -->
     <section class="mainpage">
         <div class="container wiki-content bg-light">
         <div class="row">
@@ -53,54 +50,19 @@
         </div>
 
         </div>
-        <div class="container wiki-content bg-light">
-          <h3 class="h1 mb-3">Useful Links</h3>
-
-        <!-- Cards and Cards Format -->
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-2">
-          <div class="col">
-            <div class="card my-4">
-                <img src="./templates/cards_template/img1.jpg" class="card-img-top" alt="">
-                <div class="card-body text-center mt-4">
-                    <h4 class="card-title">NAME2</h4>
-                    <p class="card-text">ahhahahah</p>
-                </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card my-4">
-                <img src="./templates/cards_template/img1.jpg" class="card-img-top" alt="">
-                <div class="card-body text-center mt-4">
-                    <h4 class="card-title">NAME2</h4>
-                    <p class="card-text">ahhahahah</p>
-                </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card my-4">
-                <img src="./templates/cards_template/img1.jpg" class="card-img-top" alt="">
-                <div class="card-body text-center mt-4">
-                    <h4 class="card-title">NAME2</h4>
-                    <p class="card-text">ahhahahah</p>
-                </div>
-            </div>
-          </div>
-        </div>
-        </div>
     </section>
 
 
   <!-- Navigation -->
-  <!-- TEMPLATED -->
-  <div class="menu">
+  <div class="menu sticky">
     <ul class="">
       <li><a href="#" class="">Home</a></li>
       <div class="dropdown">
         <li><a href="#" class="dropdown-btn">Project</a></li>
         <div class="dropdown-content">
-          <a href="#" class="dropdown-item">Description</a>
-          <a href="#" class="dropdown-item">Engineering</a>
-          <a href="#" class="dropdown-item">Proof of Concept</a>
+          <a href="#" class="dropdown-item text-light">Description</a>
+          <a href="#" class="dropdown-item text-light">Engineering</a>
+          <a href="#" class="dropdown-item text-light">Proof of Concept</a>
         </div>
       </div>
       <li><a href="#">Modeling</a></li>
@@ -150,34 +112,41 @@
     </ul>
   </div>
 
-  <!-- Footer --> 
-  <!-- TEMPLATED -->
+  <!-- Footer -->
   <div class="footmenu">
     <footer class="container">
     <div class="row mt-6 text-light">
       <div class="col-12 col-md">
-        Mingdao iGEM Team
-        <small class="d-block mb-3 text-muted">&copy; 2021 All Rights Reserved</small>
-        <small><a class="text-muted" href="#">No.497, Sec. 1, Zhongshan Rd., Wuri District, Taichung City 414, Taiwan (R.O.C.)</a></small>
+        Mingdao High School
+        <small class="d-block mb-3 text-muted">&copy; 2021</small>
       </div>
       <div class="col-6 col-md">
-        <h5>Contacts</h5>
+        <h5>Features</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">(+886)423341797</a></li>
-          <li><a class="text-muted" href="#">biolab@ms.mingdao.edu.tw</a></li>
-          <li></li>
-
+          <li><a class="text-muted" href="#">Cool stuff</a></li>
+          <li><a class="text-muted" href="#">Random feature</a></li>
+          <li><a class="text-muted" href="#">Team feature</a></li>
+          <li><a class="text-muted" href="#">Stuff for developers</a></li>
+          <li><a class="text-muted" href="#">Another one</a></li>
+          <li><a class="text-muted" href="#">Last time</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
-        <h5>Wiki</h5>
+        <h5>Resources</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Home</a></li>
-          <li><a class="text-muted" href="#">Project</a></li>
-          <li><a class="text-muted" href="#">Team Members</a></li>
-          <li><a class="text-muted" href="#">Modeling</a></li>
-          <li><a class="text-muted" href="#">HP</a></li>
-          <li><a class="text-muted" href="#">Enterprise</a></li>
+          <li><a class="text-muted" href="#">Resource</a></li>
+          <li><a class="text-muted" href="#">Resource name</a></li>
+          <li><a class="text-muted" href="#">Another resource</a></li>
+          <li><a class="text-muted" href="#">Final resource</a></li>
+        </ul>
+      </div>
+      <div class="col-6 col-md">
+        <h5>Resources</h5>
+        <ul class="list-unstyled text-small">
+          <li><a class="text-muted" href="#">Business</a></li>
+          <li><a class="text-muted" href="#">Education</a></li>
+          <li><a class="text-muted" href="#">Government</a></li>
+          <li><a class="text-muted" href="#">Gaming</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
@@ -186,13 +155,7 @@
           <li><a class="text-muted" href="#">SnapGene</a></li>
           <li><a class="text-muted" href="#">Integrated DNA Technologies</a></li>
           <li><a class="text-muted" href="#">Addgene</a></li>
-          <li><a class="text-muted" href="#">Twisted Bioscience</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md">
-        <ul class="social">
-          <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
-          <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
+          <li><a class="text-muted" href="#">TwistedBioscience</a></li>
         </ul>
       </div>
     </div>
@@ -200,7 +163,6 @@
   </div>
 
     <!-- Javascript -->
-    <!-- TEMPLATED -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
